// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchTransformationPlansAction dispatches PENDING and FULFILLED actions 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_PENDING",
  },
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_FULFILLED",
  },
]
`;

exports[`setMigrationsFilterAction dispatches additional actions 1`] = `
Array [
  Object {
    "payload": "Migrations Plans Not Started",
    "type": "V2V_SET_MIGRATIONS_FILTER",
  },
  Object {
    "payload": "Some payload",
    "type": "SOME_ACTION_TYPE",
  },
]
`;

exports[`setMigrationsFilterAction dispatches an action with correct type and payload 1`] = `
Array [
  Object {
    "payload": "Migrations Plans Not Started",
    "type": "V2V_SET_MIGRATIONS_FILTER",
  },
]
`;
